# PROJECT

./: index.html  package-lock.json  package.json  tailwind.config.js
backend/: graph.py  main.py  pyproject.toml  render.yaml  requirements.txt  test_backend.py
scratch/: test_ai_assistant.js
src/: App.jsx  index.css
src/agents/: ArchitectureAgent.js  DiscoveryAgent.js  EstimationAgent.js  ProposalAgent.js  RouterAgent.js  ValidationAgent.js
src/context/: AppContext.jsx
src/data/: cloudPricing.js  featureTemplates.js  mockBenchDevelopers.js  mockClients.js  mockProposals.js  mockRagKnowledgeBase.js
src/graph/: graphEngine.js  router.js
src/nodes/: ApiPricingNode.js  ArchitectureNode.js  CloudPricingNode.js  CostEstimationNode.js  DeveloperMatchingNode.js  DiscoveryNode.js  FallbackNode.js  FeatureConfirmationNode.js  FeatureSuggestionNode.js  GeminiNode.js  GreetingNode.js  GuardNode.js  HourEstimationNode.js  IntentClassificationNode.js  MarkdownResponseNode.js  MemoryExtractNode.js  MemoryRecallNode.js  OpenAINode.js  PreprocessNode.js  ProposalNode.js  SOWNode.js  TimelineNode.js
src/pages/: AiChatAssistantPage.jsx  BenchDevelopersPage.jsx  ClientsPage.jsx  DashboardOverview.jsx  LandingPage.jsx  PortalAuthGatePage.jsx  ProposalGeneratorPage.jsx  ProposalHistoryPage.jsx  ProposalPreviewPage.jsx
src/prompts/: promptTemplates.js
src/services/: agentWorkflowEngine.js  authService.js  backendApi.js  checkpointService.js  exportUtils.js  industryRegistry.js  langGraphEngine.js  observabilityService.js  ragEngine.js  retryService.js
(+14 files in other folders)
