[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "google-generativeai==0.7.2",
    "langchain>=1.3.14",
    "langgraph>=1.2.9",
    "pydantic==2.8.2",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "uvicorn==0.30.6",
]
